--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
             })
             $("nav ul li a").eq(1).click(function () {
                 console.log("点击1")
-                let resumeHTML = '<h2>牢大</h2>' +
-                    '<div><img src="img/manba.jpg" alt="" class="manba"></div>' +
-                    '<p>姓名：牢大</p>';
+                let resumeHTML = '<h2>沁</h2>' +
+                  <!--  '<div><img src="img/manba.jpg" alt="" class="manba"></div>' + -->
+                    '<p>最爱阿酱啦~</p>';
                 $(".content").html(resumeHTML);
             })
             $("nav ul li a").eq(2).click(function () {
