--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
         </ul>
     </nav>
     <div class="content">
-        <h2>我的第一篇文章</h2>
-        <p class="one">这是我的第一篇博客文章，我将会在这里分享我的想法和经验。</p>
+        <h2>欢迎来到沁的小窝（？）</h2>
+        <p class="one">这里的东西还不多哦，会慢慢增加的。</p>
         <!-- 文章内容 -->
 
     </div>
