--- a/index.html
+++ b/index.html
@@ -2,194 +2,197 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2306覃睿的项目</title>
-    <link rel="icon" type="image/png" sizes="192x192" href="img/logo.png">
-    <!-- 引入Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!-- （可选）添加自定义CSS（如果需要） -->
-    <style>
-        /* 这里可以添加自定义的媒体查询和样式 */
-        /* 例如，改变小屏幕上的导航栏背景色 */
-        body {
-            background-image: url(img/background.jpeg);
-            background-repeat: no-repeat;
-            /* 不重复图片 */
-            background-position: center center;
-            /* 图片居中显示 */
-            background-size: auto auto;
-            /* 拉伸图片以填充元素 */
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>2306覃睿的项目</title>
+	<link rel="icon" type="image/png" sizes="192x192" href="img/logo.png">
+	<!-- 引入Bootstrap CSS -->
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<!-- （可选）添加自定义CSS（如果需要） -->
+	<style>
+		body {
+			background-image: url(img/background.jpeg);
+			background-repeat: no-repeat;
+			/* 不重复图片 */
+			background-position: center center;
+			/* 图片居中显示 */
+			background-size: auto auto;
+			/* 拉伸图片以填充元素 */
 			display: flex;
-			    flex-direction: column;
-			    min-height: 100vh; /* 视口高度 */
-			    margin: 0;
-			    padding: 0;
-			    box-sizing: border-box;
-        }
-		
-		main{
+			flex-direction: column;
+			min-height: 100vh;
+			/* 视口高度 */
+			margin: 0;
+			padding: 0;
+			box-sizing: border-box;
+		}
+
+		main {
 			flex: 1;
 		}
-		
+
+		#gy {
+			text-align: center;
+		}
+
 		.mod_help {
-		    display: flex;
-		    justify-content: space-around;
-		    /* 让每个列表项平均分布 */
-		    padding: 20px;
-		    background-color: rgba(255, 255, 255, 0.7);
+			display: flex;
+			justify-content: space-around;
+			/* 让每个列表项平均分布 */
+			padding: 20px;
+			background-color: rgba(255, 255, 255, 0.7);
 			margin-top: 100px;
 		}
-		
+
 		.mod_help_item dt {
-		    font-weight: bold;
+			font-weight: bold;
 		}
-		
+
 		.mod_help_item dd a {
-		    text-decoration: none;
-		    color: #333;
-		    display: block;
-		    margin-bottom: 5px;
+			text-decoration: none;
+			color: #333;
+			display: block;
+			margin-bottom: 5px;
 		}
 
-        @media (max-width: 767.98px) {
-            .navbar-brand {
-                color: #fff;
-                /* 示例：改变品牌标志的颜色 */
-            }
+		@media (max-width: 767.98px) {
+			.navbar-brand {
+				color: #fff;
+				/* 示例：改变品牌标志的颜色 */
+			}
 
-            .navbar-nav .nav-link {
-                color: #fff;
-                /* 示例：改变链接的颜色 */
-            }
-
-           
-        }
-    </style>
-    <!-- 引入Bootstrap JavaScript（可选，如果你需要导航栏的折叠效果） -->
-    <script src="js/jquery-3.5.1.slim.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            let name = prompt("请输入你的名字：", "");
-            if (name != null) {
-                $("#user").text(name);
-                alert("你好，" + name + "！");
-            } else {
-                alert("你没有输入名字。");
-            }
-
-            $('.cls').click(function () {
-                $(".lbt").remove();
-                $(this).parent().remove();
-            });
-        })
+			.navbar-nav .nav-link {
+				color: #fff;
+				/* 示例：改变链接的颜色 */
+			}
 
 
-    </script>
+		}
+	</style>
+	<!-- 引入Bootstrap JavaScript（可选，如果你需要导航栏的折叠效果） -->
+	<script src="js/jquery-3.5.1.slim.min.js"></script>
+	<script src="js/popper.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script>
+		$(document).ready(function () {
+			let name = prompt("请输入你的名字：", "");
+			if (name != null) {
+				$("#user").text(name);
+				alert("你好，" + name + "！");
+			} else {
+				alert("你没有输入名字。");
+			}
+
+			$('.cls').click(function () {
+				$(".lbt").remove();
+				$(this).parent().remove();
+			});
+		})
+
+
+	</script>
 </head>
 
 <body>
 	<main>
 		<!-- 导航栏 -->
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		    <a class="navbar-brand" href="#"><img style="height: 50px; width: 50px;" src="img/logo.png" alt="" /></a>
-		    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-		        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-		        <span class="navbar-toggler-icon"></span>
-		    </button>
-		    <div class="collapse navbar-collapse" id="navbarNav">
-		        <ul class="navbar-nav">
-		            <li class="nav-item active">
-		                <a class="nav-link" href="#">首页 <span class="sr-only">(current)</span></a>
-		            </li>
-		            <li class="nav-item">
-		                <a class="nav-link" href="#gy">关于</a>
-		            </li>
-		            <li class="nav-item">
-		                <a class="nav-link" href="#">服务</a>
-		            </li>
-		            <li class="nav-item">
-		                <a class="nav-link" href="#">联系我们</a>
-		            </li>
-		        </ul>
-		    </div>
+			<a class="navbar-brand" href="#"><img style="height: 50px; width: 50px;" src="img/logo.png" alt="" /></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+					<li class="nav-item active">
+						<a class="nav-link" href="#">首页 <span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#gy">关于</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">服务</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">联系我们</a>
+					</li>
+				</ul>
+			</div>
 		</nav>
-		
+
 		<!-- 页面内容 -->
 		<div class="container mt-5">
-		    <h1>欢迎小黑子<span id="user">你</span>来到我的网站！</h1>
+			<h1>欢迎小黑子<span id="user">你</span>来到我的网站！</h1>
 		</div>
 		<div style="margin: 0 auto; width: 20px;"><button class="cls btn btn-danger">&times;</button></div>
 		<div style="width: 60%; height: auto; margin: 0 auto;" class="lbt">
-		    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-		        <ol class="carousel-indicators">
-		            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-		            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-		            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-		        </ol>
-		        <div class="carousel-inner">
-		            <div class="carousel-item active">
-		                <img src="img/path-to-image-1.jpg" class="d-block w-100" alt="First slide">
-		            </div>
-		            <div class="carousel-item">
-		                <img src="img/path-to-image-2.jpg" class="d-block w-100" alt="Second slide">
-		            </div>
-		            <div class="carousel-item">
-		                <img src="img/path-to-image-3.jpg" class="d-block w-100" alt="Third slide">
-		            </div>
-		        </div>
-		        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-		            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		            <span class="sr-only">Previous</span>
-		        </a>
-		        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-		            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-		            <span class="sr-only">Next</span>
-		        </a>
-		    </div>
+			<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+				<ol class="carousel-indicators">
+					<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+					<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+					<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+				</ol>
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<img src="img/path-to-image-1.jpg" class="d-block w-100" alt="First slide">
+					</div>
+					<div class="carousel-item">
+						<img src="img/path-to-image-2.jpg" class="d-block w-100" alt="Second slide">
+					</div>
+					<div class="carousel-item">
+						<img src="img/path-to-image-3.jpg" class="d-block w-100" alt="Third slide">
+					</div>
+				</div>
+				<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+				</a>
+			</div>
 		</div>
 	</main>
-    
 
-    <div class="mod_help" id="gy">
-        <dl class="mod_help_item">
-            <dt>爱坤指南</dt>
-            <dd><a href="#">爱坤流程</a></dd>
-            <dd><a href="#">爱坤介绍</a></dd>
-            <dd><a href="#">生活</a></dd>
-            <dd><a href="#">常见问题</a></dd>
-        </dl>
-        <dl class="mod_help_item">
-            <dt>爱坤服务</dt>
-            <dd><a href="#">爱坤政策</a></dd>
-            <dd><a href="#">爱坤方式</a></dd>
-            <dd><a href="#">爱坤制度</a></dd>
-            <dd><a href="#">客服</a></dd>
-        </dl>
-        <dl class="mod_help_item">
-            <dt>爱坤方式</dt>
-            <dd><a href="#">唱</a></dd>
-            <dd><a href="#">跳</a></dd>
-            <dd><a href="#">rap</a></dd>
-            <dd><a href="#">篮球</a></dd>
-        </dl>
-        <dl class="mod_help_item">
-            <dt>关于爱坤</dt>
-            <dd><a href="#">坤坤介绍</a></dd>
-            <dd><a href="#">爱坤发展历程</a></dd>
-            <dd><a href="#">加入爱坤</a></dd>
-            <dd><a href="#">爱坤伙伴</a></dd>
-        </dl>
-        <dl class="mod_help_item">
-            <dt>关注我们</dt>
-            <dd><a href="#">爱坤公众号</a></dd>
-            <dd><a href="#">爱坤微博</a></dd>
-            <dd><a href="#">抖音账号</a></dd>
-            <dd><a href="#">爱坤下载</a></dd>
-        </dl>
-    </div>
+
+	<div class="mod_help" id="gy">
+		<dl class="mod_help_item">
+			<dt>爱坤指南</dt>
+			<dd><a href="#">爱坤流程</a></dd>
+			<dd><a href="#">爱坤介绍</a></dd>
+			<dd><a href="#">生活</a></dd>
+			<dd><a href="#">常见问题</a></dd>
+		</dl>
+		<dl class="mod_help_item">
+			<dt>爱坤服务</dt>
+			<dd><a href="#">爱坤政策</a></dd>
+			<dd><a href="#">爱坤方式</a></dd>
+			<dd><a href="#">爱坤制度</a></dd>
+			<dd><a href="#">客服</a></dd>
+		</dl>
+		<dl class="mod_help_item">
+			<dt>爱坤方式</dt>
+			<dd><a href="#">唱</a></dd>
+			<dd><a href="#">跳</a></dd>
+			<dd><a href="#">rap</a></dd>
+			<dd><a href="#">篮球</a></dd>
+		</dl>
+		<dl class="mod_help_item">
+			<dt>关于爱坤</dt>
+			<dd><a href="#">坤坤介绍</a></dd>
+			<dd><a href="#">爱坤发展历程</a></dd>
+			<dd><a href="#">加入爱坤</a></dd>
+			<dd><a href="#">爱坤伙伴</a></dd>
+		</dl>
+		<dl class="mod_help_item">
+			<dt>关注我们</dt>
+			<dd><a href="#">爱坤公众号</a></dd>
+			<dd><a href="#">爱坤微博</a></dd>
+			<dd><a href="#">抖音账号</a></dd>
+			<dd><a href="#">爱坤下载</a></dd>
+		</dl>
+	</div>
 </body>
 
 </html>
