--- a/finger-guessing.html
+++ b/finger-guessing.html
@@ -29,6 +29,20 @@
 
 		main {
 			flex: 1;
+			text-align: center;
+		}
+
+		#png {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			padding: 10px;
+		}
+
+		#png img {
+			width: 45%;
+			height: auto;
+			margin: 0 2.5%;
 		}
 
 		#gy {
@@ -38,7 +52,6 @@
 		.mod_help {
 			display: flex;
 			justify-content: space-around;
-			/* 让每个列表项平均分布 */
 			padding: 20px;
 			background-color: rgba(255, 255, 255, 0.7);
 			margin-top: 100px;
@@ -55,46 +68,28 @@
 			margin-bottom: 5px;
 		}
 
+
 		@media (max-width: 767.98px) {
 			.navbar-brand {
 				color: #fff;
-				/* 示例：改变品牌标志的颜色 */
 			}
 
 			.navbar-nav .nav-link {
 				color: #fff;
-				/* 示例：改变链接的颜色 */
 			}
 
 
 		}
 	</style>
-	<!-- 引入Bootstrap JavaScript（可选，如果你需要导航栏的折叠效果） -->
 	<script src="js/jquery-3.5.1.slim.min.js"></script>
 	<script src="js/popper.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script>
-		$(document).ready(function () {
-			let name = prompt("请输入你的名字：", "");
-			if (name != null) {
-				$("#user").text(name);
-				alert("你好，" + name + "！");
-			} else {
-				alert("你没有输入名字。");
-			}
 
-			$('.cls').click(function () {
-				$(".lbt").remove();
-				$(this).parent().remove();
-			});
-		})
-
-
-	</script>
 </head>
 
 <body>
 	<main>
+
 		<!-- 导航栏 -->
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<a class="navbar-brand" href="#"><img style="height: 50px; width: 50px;" src="img/logo.png" alt="" /></a>
@@ -105,7 +100,7 @@
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
 					<li class="nav-item active">
-						<a class="nav-link" href="#">首页 <span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="index.html">首页 <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#gy">关于</a>
@@ -120,42 +115,15 @@
 			</div>
 		</nav>
 
-		<!-- 页面内容 -->
-		<div class="container mt-5">
-			<h1>欢迎小黑子<span id="user">你</span>来到我的网站！</h1>
-		</div>
-		<div style="margin: 0 auto; width: 20px;"><button class="cls btn btn-danger">&times;</button></div>
-		<div style="width: 60%; height: auto; margin: 0 auto;" class="lbt">
-			<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-				<ol class="carousel-indicators">
-					<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-					<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-					<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-				</ol>
-				<div class="carousel-inner">
-					<div class="carousel-item active">
-						<img src="img/path-to-image-1.jpg" class="d-block w-100" alt="First slide">
-					</div>
-					<div class="carousel-item">
-						<img src="img/path-to-image-2.jpg" class="d-block w-100" alt="Second slide">
-					</div>
-					<div class="carousel-item">
-						<img src="img/path-to-image-3.jpg" class="d-block w-100" alt="Third slide">
-					</div>
-				</div>
-				<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="sr-only">Previous</span>
-				</a>
-				<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="sr-only">Next</span>
-				</a>
+		<div id="game">
+			<button id="playRockPaperScissors" class="btn btn-primary">开始猜拳</button>
+			<div id="png">
+				<img id="user" src="">
+				<img id="bot" src="">
 			</div>
+			<div id="result" class="h3"></div>
 		</div>
 	</main>
-
-
 	<div class="mod_help" id="gy">
 		<dl class="mod_help_item">
 			<dt>爱坤指南</dt>
@@ -193,6 +161,53 @@
 			<dd><a href="#">爱坤下载</a></dd>
 		</dl>
 	</div>
+	<script>
+		// 猜拳游戏函数
+		function playRockPaperScissors() {
+			// 可能的选项
+			let choices = ['石头', '剪刀', '布'];
+
+			// 用户和电脑的随机选择
+			let userChoice = prompt("请选择：石头、剪刀还是布？");
+			let computerChoice = choices[Math.floor(Math.random() * choices.length)];
+
+			// 验证用户输入
+			if (!choices.includes(userChoice)) {
+				alert("无效的输入，请输入石头、剪刀或布！");
+				return;
+			}
+
+			// 判断胜负
+			let resultText;
+			if (userChoice === computerChoice) {
+				resultText = "平局！";
+			} else if ((userChoice === '石头' && computerChoice === '剪刀') ||
+				(userChoice === '剪刀' && computerChoice === '布') ||
+				(userChoice === '布' && computerChoice === '石头')) {
+				resultText = "你赢了！";
+			} else {
+				resultText = "你输了！";
+			}
+
+			let user = choices.indexOf(userChoice);
+			let bot = choices.indexOf(computerChoice);
+
+			let image1 = 'img/' + user + ".png";
+			let image2 = 'img/' + bot + ".png";
+
+			console.log(image1)
+
+			$('#user').attr('src', image1);
+			$('#bot').attr('src', image2);
+
+			$('#result').text(resultText + " 你选择了 " + userChoice + "，电脑选择了 " + computerChoice);
+		}
+		$(document).ready(function () {
+			$('#playRockPaperScissors').click(function () {
+				playRockPaperScissors();
+			});
+		});
+	</script>
 </body>
 
 </html>
