--- a/guessnumber.html
+++ b/guessnumber.html
@@ -29,6 +29,7 @@
 
 		main {
 			flex: 1;
+			text-align: center;
 		}
 
 		#gy {
@@ -55,6 +56,7 @@
 			margin-bottom: 5px;
 		}
 
+
 		@media (max-width: 767.98px) {
 			.navbar-brand {
 				color: #fff;
@@ -73,28 +75,12 @@
 	<script src="js/jquery-3.5.1.slim.min.js"></script>
 	<script src="js/popper.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script>
-		$(document).ready(function () {
-			let name = prompt("请输入你的名字：", "");
-			if (name != null) {
-				$("#user").text(name);
-				alert("你好，" + name + "！");
-			} else {
-				alert("你没有输入名字。");
-			}
 
-			$('.cls').click(function () {
-				$(".lbt").remove();
-				$(this).parent().remove();
-			});
-		})
-
-
-	</script>
 </head>
 
 <body>
 	<main>
+
 		<!-- 导航栏 -->
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<a class="navbar-brand" href="#"><img style="height: 50px; width: 50px;" src="img/logo.png" alt="" /></a>
@@ -105,7 +91,7 @@
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
 					<li class="nav-item active">
-						<a class="nav-link" href="#">首页 <span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="index.html">首页 <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#gy">关于</a>
@@ -120,42 +106,12 @@
 			</div>
 		</nav>
 
-		<!-- 页面内容 -->
-		<div class="container mt-5">
-			<h1>欢迎小黑子<span id="user">你</span>来到我的网站！</h1>
-		</div>
-		<div style="margin: 0 auto; width: 20px;"><button class="cls btn btn-danger">&times;</button></div>
-		<div style="width: 60%; height: auto; margin: 0 auto;" class="lbt">
-			<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-				<ol class="carousel-indicators">
-					<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-					<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-					<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-				</ol>
-				<div class="carousel-inner">
-					<div class="carousel-item active">
-						<img src="img/path-to-image-1.jpg" class="d-block w-100" alt="First slide">
-					</div>
-					<div class="carousel-item">
-						<img src="img/path-to-image-2.jpg" class="d-block w-100" alt="Second slide">
-					</div>
-					<div class="carousel-item">
-						<img src="img/path-to-image-3.jpg" class="d-block w-100" alt="Third slide">
-					</div>
-				</div>
-				<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="sr-only">Previous</span>
-				</a>
-				<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="sr-only">Next</span>
-				</a>
-			</div>
-		</div>
+		<h1>猜数字游戏</h1>
+		<p>猜一个1到100之间的数字:</p>
+		<input type="number" id="guessInput" min="1" max="100">
+		<button onclick="checkGuess()" class="btn btn-primary">提交猜测</button>
+		<p id="feedback"></p>
 	</main>
-
-
 	<div class="mod_help" id="gy">
 		<dl class="mod_help_item">
 			<dt>爱坤指南</dt>
@@ -193,6 +149,31 @@
 			<dd><a href="#">爱坤下载</a></dd>
 		</dl>
 	</div>
+	<script>
+		let randomNumber = Math.floor(Math.random() * 100) + 1; // 生成1到100的随机数
+		let guessInput = document.getElementById('guessInput'); // 获取输入框
+		let feedback = document.getElementById('feedback'); // 获取反馈元素
+
+		console.log(guessInput)
+
+		function checkGuess() {
+			let guess = parseInt(guessInput.value); // 获取用户猜测的数字
+
+			if (isNaN(guess)) {
+				feedback.textContent = '请输入一个有效的数字！'; // 验证输入是否为数字
+			} else if (guess === randomNumber) {
+				feedback.textContent = '恭喜你，猜对了！'; // 如果猜对了
+				// 这里可以添加更多逻辑，比如重置游戏或显示新的随机数
+			} else if (guess < randomNumber) {
+				feedback.textContent = '猜小了，再试一次！'; // 如果猜小了
+			} else {
+				feedback.textContent = '猜大了，再试一次！'; // 如果猜大了
+			}
+
+			// 可以选择性地清空输入框以便再次猜测
+			guessInput.value = '';
+		}
+	</script>
 </body>
 
 </html>
