--- a/service.html
+++ b/service.html
@@ -31,6 +31,42 @@
 			flex: 1;
 		}
 
+		.game-list {
+			list-style: none;
+			/* 移除列表样式 */
+			padding: 0;
+			/* 移除默认的内边距 */
+		}
+
+		.game-list-item {
+			padding: 10px;
+			/* 添加内边距 */
+			margin-bottom: 10px;
+			/* 添加下外边距 */
+			border: 1px solid #ddd;
+			/* 添加边框 */
+			border-radius: 5px;
+			/* 添加圆角 */
+			background-color: #f5f5f5;
+			/* 添加背景色 */
+		}
+
+		.game-list-item:hover {
+			background-color: #e8e8e8;
+			/* 鼠标悬停时改变背景色 */
+		}
+
+		.game-list-item a {
+			color: #333;
+			/* 链接颜色 */
+			text-decoration: none;
+			/* 移除下划线 */
+			display: block;
+			/* 链接占据整行 */
+			text-align: center;
+			/* 文本居中对齐 */
+		}
+
 		#gy {
 			text-align: center;
 		}
@@ -74,21 +110,6 @@
 	<script src="js/popper.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script>
-		$(document).ready(function () {
-			let name = prompt("请输入你的名字：", "");
-			if (name != null) {
-				$("#user").text(name);
-				alert("你好，" + name + "！");
-			} else {
-				alert("你没有输入名字。");
-			}
-
-			$('.cls').click(function () {
-				$(".lbt").remove();
-				$(this).parent().remove();
-			});
-		})
-
 
 	</script>
 </head>
@@ -105,7 +126,7 @@
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
 					<li class="nav-item active">
-						<a class="nav-link" href="#">首页 <span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="index.html">首页 <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#gy">关于</a>
@@ -121,37 +142,19 @@
 		</nav>
 
 		<!-- 页面内容 -->
-		<div class="container mt-5">
-			<h1>欢迎小黑子<span id="user">你</span>来到我的网站！</h1>
-		</div>
-		<div style="margin: 0 auto; width: 20px;"><button class="cls btn btn-danger">&times;</button></div>
-		<div style="width: 60%; height: auto; margin: 0 auto;" class="lbt">
-			<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-				<ol class="carousel-indicators">
-					<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-					<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-					<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-				</ol>
-				<div class="carousel-inner">
-					<div class="carousel-item active">
-						<img src="img/path-to-image-1.jpg" class="d-block w-100" alt="First slide">
-					</div>
-					<div class="carousel-item">
-						<img src="img/path-to-image-2.jpg" class="d-block w-100" alt="Second slide">
-					</div>
-					<div class="carousel-item">
-						<img src="img/path-to-image-3.jpg" class="d-block w-100" alt="Third slide">
-					</div>
-				</div>
-				<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="sr-only">Previous</span>
-				</a>
-				<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="sr-only">Next</span>
-				</a>
-			</div>
+		<div class="container mt-5"> <!-- 添加一些间距 -->
+			<h2>游戏选择</h2>
+			<ul class="game-list">
+				<li class="game-list-item">
+					<a href="finger-guessing.html">剪刀石头布</a>
+				</li>
+				<li class="game-list-item">
+					<a href="guessnumber.html">猜数字</a>
+				</li>
+				<li class="game-list-item">
+					<a href="Pianoblock.html">手速测试</a>
+				</li>
+			</ul>
 		</div>
 	</main>
 
