--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 		main {
 			flex: 1;
 		}
+		
 
 		#gy {
 			text-align: center;
@@ -167,7 +168,7 @@
 		<dl class="mod_help_item">
 			<dt>爱坤服务</dt>
 			<dd><a href="#">爱坤政策</a></dd>
-			<dd><a href="#">爱坤方式</a></dd>
+			<dd><a href="#">爱坤社区</a></dd>
 			<dd><a href="#">爱坤制度</a></dd>
 			<dd><a href="#">客服</a></dd>
 		</dl>
