--- a/service.html
+++ b/service.html
@@ -154,6 +154,9 @@
 				<li class="game-list-item">
 					<a href="Pianoblock.html">手速测试</a>
 				</li>
+				<li class="game-list-item">
+					<a href="rownum.html">抽数字</a>
+				</li>
 			</ul>
 		</div>
 	</main>
@@ -170,7 +173,7 @@
 		<dl class="mod_help_item">
 			<dt>爱坤服务</dt>
 			<dd><a href="#">爱坤政策</a></dd>
-			<dd><a href="#">爱坤方式</a></dd>
+			<dd><a href="#">爱坤社区</a></dd>
 			<dd><a href="#">爱坤制度</a></dd>
 			<dd><a href="#">客服</a></dd>
 		</dl>
