--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 
 
 		}
+
 	</style>
 	<!-- 引入Bootstrap JavaScript（可选，如果你需要导航栏的折叠效果） -->
 	<script src="js/jquery-3.5.1.slim.min.js"></script>
@@ -91,6 +92,15 @@
 		})
 
 
+	</script>
+		<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-3L2GVVEFNF"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'G-3L2GVVEFNF');
 	</script>
 </head>
 
