--- a/guessnumber.html
+++ b/guessnumber.html
@@ -24,57 +24,56 @@
 		main {
 			flex: 1;
 		}
-		
-		dt{
+
+		dt {
 			font-size: 20px;
 			color: gray;
 		}
-		
-		/* 模态框样式 */
+
 		.modal {
-		  display: none; /* 默认隐藏模态框 */
-		  position: fixed; /* 模态框固定在视口上 */
-		  z-index: 1; /* 设置模态框在最高层级 */
-		  left: 0;
-		  top: 0;
-		  width: 100%; /* 全屏宽度 */
-		  height: 100%; /* 全屏高度 */
-		  overflow: auto; /* 允许滚动 */
-		  background-color: rgba(0, 0, 0, 0.4); /* 黑色背景，半透明 */
+			display: none;
+			position: fixed;
+			z-index: 1;
+			left: 0;
+			top: 0;
+			width: 100%;
+			height: 100%;
+			overflow: auto;
+			background-color: rgba(0, 0, 0, 0.4);
 		}
-		
+
 		/* 模态框内容样式 */
 		.modal-content {
-		  background-color: #fefefe;
-		  margin: 15% auto; /* 15% 从顶部开始，水平居中 */
-		  padding: 20px;
-		  border: 1px solid #888;
-		  width: 80%; /* 宽度可以根据需要调整 */
-		  max-width: 600px; /* 限制最大宽度 */
+			background-color: #fefefe;
+			margin: 15% auto;
+			padding: 20px;
+			border: 1px solid #888;
+			width: 80%;
+			max-width: 600px;
 		}
-		
+
 		/* 关闭按钮样式 */
 		.close {
-		  color: #aaa;
-		  float: right;
-		  font-size: 28px;
-		  font-weight: bold;
-		  cursor: pointer;
+			color: #aaa;
+			float: right;
+			font-size: 28px;
+			font-weight: bold;
+			cursor: pointer;
 		}
-		
+
 		.close:hover,
 		.close:focus {
-		  color: black;
-		  text-decoration: none;
-		  cursor: pointer;
+			color: black;
+			text-decoration: none;
+			cursor: pointer;
 		}
-		
+
 		/* 二维码图片样式 */
 		.qrcode-image {
-		  display: block;
-		  margin: 0 auto; /* 水平居中 */
-		  max-width: 100%; /* 响应式图片 */
-		  height: auto;
+			display: block;
+			margin: 0 auto;
+			max-width: 100%;
+			height: auto;
 		}
 
 		#games {
@@ -148,13 +147,12 @@
 				</ul>
 			</div>
 		</nav>
-		
+
 		<div id="myModal" class="modal">
-		  <div class="modal-content">
-		    <span class="close">&times;</span>
-		    <img src="img/My.png" alt="二维码名片" class="qrcode-image">
-		    <!-- 可以添加一些额外的文本或信息 -->
-		  </div>
+			<div class="modal-content">
+				<span class="close">&times;</span>
+				<img src="img/My.png" alt="二维码名片" class="qrcode-image">
+			</div>
 		</div>
 		<div id="games">
 			<h1>猜数字游戏</h1>
@@ -223,26 +221,26 @@
 			}
 			guessInput.value = '';
 		}
-		
+
 		let modal = document.getElementById("myModal");
 		let btn = document.getElementById("card");
 		let span = document.getElementsByClassName("close")[0];
-		
+
 		// 显示模态框
-		btn.onclick = function() {
-		  modal.style.display = "block";
+		btn.onclick = function () {
+			modal.style.display = "block";
 		}
-		
+
 		// 隐藏模态框
-		span.onclick = function() {
-		  modal.style.display = "none";
+		span.onclick = function () {
+			modal.style.display = "none";
 		}
-		
+
 		// 当用户点击模态框外部时关闭它
-		window.onclick = function(event) {
-		  if (event.target == modal) {
-		    modal.style.display = "none";
-		  }
+		window.onclick = function (event) {
+			if (event.target == modal) {
+				modal.style.display = "none";
+			}
 		}
 	</script>
 </body>
