--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>2306覃睿的项目</title>
 	<link rel="icon" type="image/png" sizes="192x192" href="img/logo.png">
-	<!-- 引入Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<!-- （可选）添加自定义CSS（如果需要） -->
 	<style>
 		body {
 			background-image: url(img/background.jpeg);
@@ -27,66 +25,66 @@
 			flex: 1;
 		}
 
-		dt{
+		dt {
 			font-size: 20px;
 			color: gray;
 		}
-		
+
 		/* 模态框样式 */
 		.modal {
-		  display: none; /* 默认隐藏模态框 */
-		  position: fixed; /* 模态框固定在视口上 */
-		  z-index: 1; /* 设置模态框在最高层级 */
-		  left: 0;
-		  top: 0;
-		  width: 100%; /* 全屏宽度 */
-		  height: 100%; /* 全屏高度 */
-		  overflow: auto; /* 允许滚动 */
-		  background-color: rgba(0, 0, 0, 0.4); /* 黑色背景，半透明 */
+			display: none;
+			position: fixed;
+			z-index: 1;
+			left: 0;
+			top: 0;
+			width: 100%;
+			height: 100%;
+			overflow: auto;
+			background-color: rgba(0, 0, 0, 0.4);
 		}
-		
+
 		/* 模态框内容样式 */
 		.modal-content {
-		  background-color: #fefefe;
-		  margin: 15% auto; /* 15% 从顶部开始，水平居中 */
-		  padding: 20px;
-		  border: 1px solid #888;
-		  width: 80%; /* 宽度可以根据需要调整 */
-		  max-width: 600px; /* 限制最大宽度 */
+			background-color: #fefefe;
+			margin: 15% auto;
+			padding: 20px;
+			border: 1px solid #888;
+			width: 80%;
+			max-width: 600px;
 		}
-		
+
 		/* 关闭按钮样式 */
 		.close {
-		  color: #aaa;
-		  float: right;
-		  font-size: 28px;
-		  font-weight: bold;
-		  cursor: pointer;
+			color: #aaa;
+			float: right;
+			font-size: 28px;
+			font-weight: bold;
+			cursor: pointer;
 		}
-		
+
 		.close:hover,
 		.close:focus {
-		  color: black;
-		  text-decoration: none;
-		  cursor: pointer;
+			color: black;
+			text-decoration: none;
+			cursor: pointer;
 		}
-		
+
 		/* 二维码图片样式 */
 		.qrcode-image {
-		  display: block;
-		  margin: 0 auto; /* 水平居中 */
-		  max-width: 100%; /* 响应式图片 */
-		  height: auto;
+			display: block;
+			margin: 0 auto;
+			max-width: 100%;
+			height: auto;
 		}
-		
+
 		.bouncing-ball {
-		  position: absolute;
-		  width: 50px; /* 篮球的宽度 */
-		  height: 50px; /* 篮球的高度 */
-		  background-image: url('img/basketball.png'); /* 替换为你的篮球图片路径 */
-		  background-size: cover;
-		  border-radius: 50%; /* 圆形效果 */
-		  animation: bounce 2s infinite; /* 弹跳动画 */
+			position: absolute;
+			width: 50px;
+			height: 50px;
+			background-image: url('img/basketball.png');
+			background-size: cover;
+			border-radius: 50%;
+			animation: bounce 2s infinite;
 		}
 
 
@@ -181,11 +179,10 @@
 		</div>
 		<div id="basketball" class="bouncing-ball"></div>
 		<div id="myModal" class="modal">
-		  <div class="modal-content">
-		    <span class="close">&times;</span>
-		    <img src="img/My.png" alt="二维码名片" class="qrcode-image">
-		    <!-- 可以添加一些额外的文本或信息 -->
-		  </div>
+			<div class="modal-content">
+				<span class="close">&times;</span>
+				<img src="img/My.png" alt="二维码名片" class="qrcode-image">
+			</div>
 		</div>
 		<div style="margin: 0 auto; width: 20px;"><button class="cls btn btn-danger">&times;</button></div>
 		<div style="width: 60%; height: auto; margin: 0 auto;" class="lbt">
@@ -258,81 +255,81 @@
 	</div>
 	<script>
 		const basketball = document.getElementById('basketball');
-		const ballSize = 50; // 篮球的大小
+		const ballSize = 50;
 		const windowSize = {
-		  width: window.innerWidth,
-		  height: window.innerHeight
+			width: window.innerWidth,
+			height: window.innerHeight
 		};
-		
+
 		let ballPosition = {
-		  x: windowSize.width / 2 - ballSize / 2, // 初始X位置
-		  y: windowSize.height - ballSize - 50, // 初始Y位置（从底部开始弹跳）
-		  dx: 3, // X轴上的速度
-		  dy: -3 // Y轴上的速度（向上弹跳）
+			x: windowSize.width / 2 - ballSize / 2, // 初始X位置
+			y: windowSize.height - ballSize - 50, // 初始Y位置
+			dx: 3, // X轴上的速度
+			dy: -3 // Y轴上的速度
 		};
-		
+
 		function updateBall() {
-		  // 更新篮球位置
-		  ballPosition.x += ballPosition.dx;
-		  ballPosition.y += ballPosition.dy;
-		
-		  // 碰到左右边框回弹
-		  if (ballPosition.x < 0 || ballPosition.x > windowSize.width - ballSize) {
-		    ballPosition.dx = -ballPosition.dx; // 反转X轴速度
-		  }
-		
-		  // 碰到顶部边框（假设篮球不会弹得太高以至于看不到）
-		  if (ballPosition.y < 0) {
-		    ballPosition.dy = Math.abs(ballPosition.dy); // 重置Y轴速度为正，使其向下
-		  }
-		
-		  // 碰到底部边框
-		  if (ballPosition.y > windowSize.height - ballSize) {
-		    ballPosition.dy = -Math.abs(ballPosition.dy); // 反转Y轴速度
-		  }
-		
-		  // 设置篮球的CSS位置
-		  basketball.style.left = `${ballPosition.x}px`;
-		  basketball.style.top = `${ballPosition.y}px`;
-		
-		  // 请求下一帧动画
-		  requestAnimationFrame(updateBall);
+			// 更新篮球位置
+			ballPosition.x += ballPosition.dx;
+			ballPosition.y += ballPosition.dy;
+
+			// 碰到左右边框
+			if (ballPosition.x < 0 || ballPosition.x > windowSize.width - ballSize) {
+				ballPosition.dx = -ballPosition.dx; // 反转X轴速度
+			}
+
+			// 碰到顶部边框
+			if (ballPosition.y < 0) {
+				ballPosition.dy = Math.abs(ballPosition.dy); // 重置Y轴速度为正
+			}
+
+			// 碰到底部边框
+			if (ballPosition.y > windowSize.height - ballSize) {
+				ballPosition.dy = -Math.abs(ballPosition.dy); // 反转Y轴速度
+			}
+
+			// 设置篮球的CSS位置
+			basketball.style.left = `${ballPosition.x}px`;
+			basketball.style.top = `${ballPosition.y}px`;
+
+			// 请求下一帧动画
+			requestAnimationFrame(updateBall);
 		}
-		
+
 		// 开始动画
 		updateBall();
-		
+
 		// 监听窗口大小变化，更新窗口大小变量
-		window.addEventListener('resize', function() {
-		  windowSize.width = window.innerWidth;
-		  windowSize.height = window.innerHeight;
-		  // 可能需要在这里重置篮球的初始位置（视情况而定）
+		window.addEventListener('resize', function () {
+			windowSize.width = window.innerWidth;
+			windowSize.height = window.innerHeight;
+			// 可能需要在这里重置篮球的初始位置（视情况而定）
 		});
-		
-		basketball.addEventListener('click', function() {
-		    // 当点击时，删除元素
-		    this.remove();
+
+		basketball.addEventListener('click', function () {
+			// 当点击时，删除元素
+			this.remove();
 		});
-		
+
 		let modal = document.getElementById("myModal");
 		let btn = document.getElementById("card");
 		let span = document.getElementsByClassName("close")[0];
-		
+
 		// 显示模态框
-		btn.onclick = function() {
-		  modal.style.display = "block";
+		btn.onclick = function () {
+			modal.style.display = "block";
 		}
-		
+
 		// 隐藏模态框
-		span.onclick = function() {
-		  modal.style.display = "none";
+		span.onclick = function () {
+			modal.style.display = "none";
 		}
-		
+
 		// 当用户点击模态框外部时关闭它
-		window.onclick = function(event) {
-		  if (event.target == modal) {
-		    modal.style.display = "none";
-		  }
+		window.onclick = function (event) {
+			if (event.target == modal) {
+				modal.style.display = "none";
+			}
 		}
 	</script>
 </body>
